<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        style="@style/PadraoQuestions"
        android:text="@string/question_five" />

    <CheckBox
        style="@style/PadraoRadioBtnCheckBox"
        android:text="@string/opcao_five_one" />

    <CheckBox
        style="@style/PadraoRadioBtnCheckBox"
        android:text="@string/opcao_five_two" />

    <CheckBox
        style="@style/PadraoRadioBtnCheckBox"
        android:text="@string/opcao_five_three" />

    <CheckBox
        style="@style/PadraoRadioBtnCheckBox"
        android:text="@string/opcao_five_four" />

    <TextView
        style="@style/PadraoQuestions"
        android:text="@string/question_six" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            style="@style/PadraoRadioBtnCheckBox"
            android:text="@string/opcao_six_one" />

        <RadioButton
            style="@style/PadraoRadioBtnCheckBox"
            android:text="@string/opcao_six_two" />

        <RadioButton
            style="@style/PadraoRadioBtnCheckBox"
            android:text="@string/opcao_six_three" />

        <RadioButton
            style="@style/PadraoRadioBtnCheckBox"
            android:text="@string/opcao_six_four" />
    </RadioGroup>

    <include layout="@layout/grupo_quatro" />
</merge>
