<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        style="@style/PadraoQuestions"
        android:text="@string/question_seven" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/distancia_oito"
            android:paddingLeft="@dimen/distancia_oito"
            android:text="@string/opcao_seven_one" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/distancia_oito"
            android:paddingLeft="@dimen/distancia_oito"
            android:text="@string/opcao_seven_two" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/distancia_oito"
            android:paddingLeft="@dimen/distancia_oito"
            android:text="@string/opcao_seven_three" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/distancia_oito"
            android:paddingLeft="@dimen/distancia_oito"
            android:text="@string/opcao_seven_four" />
    </RadioGroup>

    <TextView
        style="@style/PadraoQuestions"
        android:text="@string/question_eight" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/distancia_oito"
            android:paddingLeft="@dimen/distancia_oito"
            android:text="@string/opcao_eight_one" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/distancia_oito"
            android:paddingLeft="@dimen/distancia_oito"
            android:text="@string/opcao_eight_two" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/distancia_oito"
            android:paddingLeft="@dimen/distancia_oito"
            android:text="@string/opcao_eight_three" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/distancia_oito"
            android:paddingLeft="@dimen/distancia_oito"
            android:text="@string/opcao_eight_four" />
    </RadioGroup>

    <TextView
        style="@style/PadraoQuestions"
        android:text="@string/question_nine" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/distancia_oito"
            android:paddingLeft="@dimen/distancia_oito"
            android:text="@string/opcao_nine_one" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/distancia_oito"
            android:paddingLeft="@dimen/distancia_oito"
            android:text="@string/opcao_nine_two" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/distancia_oito"
            android:paddingLeft="@dimen/distancia_oito"
            android:text="@string/opcao_nine_three" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/distancia_oito"
            android:paddingLeft="@dimen/distancia_oito"
            android:text="@string/opcao_nine_four" />
    </RadioGroup>

    <TextView
        style="@style/PadraoQuestions"
        android:text="@string/question_ten" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_ask_ten" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Submit" />
</merge>
