<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView
            android:text="@string/question_nine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/distancia_oito"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:text="@string/opcao_nine_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/distancia_oito"
                android:paddingLeft="@dimen/distancia_oito"/>
            <RadioButton
                android:text="@string/opcao_nine_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/distancia_oito"
                android:paddingLeft="@dimen/distancia_oito"/>
            <RadioButton
                android:text="@string/opcao_nine_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/distancia_oito"
                android:paddingLeft="@dimen/distancia_oito"/>
            <RadioButton
                android:text="@string/opcao_nine_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/distancia_oito"
                android:paddingLeft="@dimen/distancia_oito"/>
        </RadioGroup>
        <TextView
            android:text="@string/question_ten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/distancia_oito"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_ask_ten"/>
        <Button
            android:id="@+id/button_submit"
            android:text="Submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
</merge>
